progress on setting of compiler flags from lhcp-aff-config

--- a/configure.ac
+++ b/configure.ac
@@ -6,6 +6,11 @@ AC_HEADER_STDC
 dnl large file support is required to open files larger than 2GB
 AC_SYS_LARGEFILE
 
+dnl we use openmp to parallelise over keys
+AC_OPENMP()
+CFLAGS+=" $OPENMP_CFLAGS"
+AC_MSG_NOTICE([$CFLAGS])
+
 AC_CHECK_PROGS(LHPC_AFF_CONFIG, lhpc-aff-config)
 
 if test -n "$LHPC_AFF_CONFIG"; then
@@ -19,13 +24,17 @@ if test -n "$LHPC_AFF_CONFIG"; then
   dnl BaKo: the latter is not strictly necessary, but I've kept the #ifdefs
   dnl BaKo: that were in the code by marcuspe
   CFLAGS+=" $( ${LHPC_AFF_CONFIG} --cflags ) -DHAVE_LHPC_AFF"
-  LDFLAGS+=$( ${LHPC_AFF_CONFIG} --libs )
+  LDFLAGS+=" $( ${LHPC_AFF_CONFIG} --libs )"
+  LDFLAGS+=" $( ${LHPC_AFF_CONFIG} --ldflags )"
 else
   AC_MSG_ERROR([lhpc-aff-config not found in path, cannot proceed.
                 Please install aff from github.com/usqcd-software/aff
                 and make sure that lphc-aff-config is installed somewhere
                 in your PATH])
 fi
+
+echo "PKG_LIBS=${LDFLAGS}" > src/Makevars
+echo "PKG_CFLAGS=${CFLAGS}" >> src/Makevars
 
 AC_OUTPUT()
 
